Fix current month input height on IE

--- a/src/style/ie.styl
+++ b/src/style/ie.styl
@@ -9,6 +9,10 @@ span.flatpickr-day
   width: 14.2857143%;
   margin: 0 (($daysWidth - $daySize*7)/14)
 
+.flatpickr-current-month
+  input.cur-year
+    height: auto;
+
 @media screen and (min-width:unquote("0\0"))
   div.flatpickr-current-month
       padding-top: 0px !important
